--- a/Driving-School-proj/.gitignore
+++ b/Driving-School-proj/.gitignore
@@ -591,6 +591,9 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
+/Assets/Asset Store/RetroCartoonCarsPack1/Textures/Cicada/CICADA_4096.psd
+*.psd
+
 # Windows shortcuts
 *.lnk
 
