Adjusted traffic lights timing

--- a/Driving-School-proj/.gitignore
+++ b/Driving-School-proj/.gitignore
@@ -13,6 +13,7 @@ Assets/RetroCartoonCarsPack1/
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+../.DS_Store
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
