--- a/Driving-School-proj/.gitignore
+++ b/Driving-School-proj/.gitignore
@@ -14,6 +14,7 @@ Assets/RetroCartoonCarsPack1/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 ../.DS_Store
+driving_school_build_*
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
