update git ignore file

--- a/Driving-School-proj/.gitignore
+++ b/Driving-School-proj/.gitignore
@@ -600,6 +600,12 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+
+*.psd
+# *.meta
+# *.FBX
+# *.mat
+
 ### VisualStudio ###
 
 # User-specific files
