fix: missing firebase configuration files

--- a/Driving-School-proj/.gitignore
+++ b/Driving-School-proj/.gitignore
@@ -614,14 +614,14 @@ $RECYCLE.BIN/
 # **/.firebase/
 
 # Exclude Firebase plugin binaries and platform-specific folders
-**/Firebase/Plugins/x86_64/
-**/Firebase/Plugins/x86_64/**/*.dll
-**/Firebase/Plugins/x86_64/**/*.lib
+# **/Firebase/Plugins/x86_64/
+# **/Firebase/Plugins/x86_64/**/*.dll
+# **/Firebase/Plugins/x86_64/**/*.lib
 **/Firebase/Plugins/x86_64/**/*.so
-**/Firebase/Plugins/x86_64/**/*.a
-**/Firebase/Plugins/x86_64/**/*.dylib
-**/Firebase/Plugins/x86_64/**/*.pdb
-**/Firebase/Plugins/x86_64/**/*.mdb
+# **/Firebase/Plugins/x86_64/**/*.a
+# **/Firebase/Plugins/x86_64/**/*.dylib
+# **/Firebase/Plugins/x86_64/**/*.pdb
+# **/Firebase/Plugins/x86_64/**/*.mdb
 **/Firebase/Plugins/x86_64/**/*.bundle
 
 
